--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.github.pedromassango:doubleClick:3.0'
+
 
     // for room database
     implementation "android.arch.persistence.room:runtime:1.1.1"
