By Mohammed Elamary

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,6 +119,10 @@
             </intent-filter>
         </receiver>
 
+
+        <service
+            android:name=".services.MyService"
+            android:enabled="true"></service>
     </application>
 
 </manifest>
