--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,12 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.pedromassango:doubleClick:3.0'
 
-
-
     // for room database
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+//////// mohammed_Elamary
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    //////////////
 }
 apply plugin: 'com.google.gms.google-services'
