survey screen re design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -127,6 +127,17 @@
             android:name=".services.MyService"
             android:enabled="true" />
 
+        <activity android:name=".AddFormData.NewUiSurveyScreen">
+
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+
+        </activity>
+            android:enabled="true" />
+
         <activity android:name=".SplashActivity">
 
             <intent-filter>
