--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.pedromassango:doubleClick:3.0'
 
+
+
     // for room database
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
@@ -52,5 +54,8 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     //////////////
+    implementation 'io.pravikant:materialspinner:1.0.0'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
