--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     //////////////
     implementation 'io.pravikant:materialspinner:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
 
 }
